fixes miniviz height on mobile

--- a/app/toCanon/topics/topic.css
+++ b/app/toCanon/topics/topic.css
@@ -119,12 +119,6 @@
     top: 0;
   }
 
-  &.TextViz {
-    & .d3plus {
-      min-height: 400px;
-    }
-  }
-
   &.Column {
     flex: 1;
     flex-direction: column;
